--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
           knowledge and skills in the field of
           <strong><em>Data analytics</em></strong> and
           <strong><em>Web development</em></strong> for continuous improvement.
-          I like catching a flick, grabbing some beer, and
+          I like
+          <a href="https://www.imdb.com/user/ur108580247/lists?ref_=nv_usr_lst_3" target="_blank">catching a flick</a>, grabbing some beer, and
           <a
             href="https://www.goodreads.com/review/list/41665473-phankawee-mukdaprakorn?ref=nav_mybooks"
             target="_blank"
