--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phankawee's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css" />
+
   </head>
   <body>
     <table cellspacing="20">
@@ -34,7 +36,11 @@
           <strong><em>Data analytics</em></strong> and
           <strong><em>Web development</em></strong> for continuous improvement.
           I like
-          <a href="https://www.imdb.com/user/ur108580247/lists?ref_=nv_usr_lst_3" target="_blank">catching a flick</a>, grabbing some beer, and
+          <a
+            href="https://www.imdb.com/user/ur108580247/lists?ref_=nv_usr_lst_3"
+            target="_blank"
+            >catching a flick</a
+          >, grabbing some beer, and
           <a
             href="https://www.goodreads.com/review/list/41665473-phankawee-mukdaprakorn?ref=nav_mybooks"
             target="_blank"
@@ -53,7 +59,7 @@
       </li>
       <li>Major in science and mathemativs, Debsirin school GPA: 3.77</li>
     </ul>
-    <hr>
+    <hr />
     <h3>Work Experience</h3>
     <table cellspacing="10">
       <tr>
@@ -77,11 +83,11 @@
         <td>Management Trainee at True</td>
       </tr>
     </table>
-    <hr>
+    <hr />
     <h3>Skills</h3>
     <!--Nested Table-->
     <!--หลักการคือตารางนึงแบ่งเป็น 2 cell(td) แล้วใน 1 cell เอาตารางไปใส่อีก แล้วทำเป็น 2 row(tr) แล้วค่อยใส่ข้อมูล td ในแต่ละ row อีกที-->
-    <table cellspacing="10" >
+    <table cellspacing="10">
       <td>
         <table>
           <tr>
@@ -116,7 +122,7 @@
       </td>
     </table>
 
-    <hr>
+    <hr />
     <h3><a href="hobbies.html">My Hobbies</a></h3>
     <h3><a href="contact-me.html">Contact Me</a></h3>
   </body>
